Feat_Add_OCR_Support

--- a/index.html
+++ b/index.html
@@ -76,7 +76,15 @@
                 <button id="close-analyze" class="close-btn">&times;</button>
             </div>
             <div class="analyze-body">
-                <p class="hint-text">请粘贴病理或影像学报告：</p>
+                <p class="hint-text">请粘贴病理或影像学报告，或上传图片：</p>
+                <div class="upload-area">
+                    <input type="file" id="ocr-upload" accept="image/*" style="display: none;">
+                    <button id="upload-btn" class="secondary-btn" style="width:100%; margin-bottom:0.5rem;">📸 上传/拍摄图片识别</button>
+                    <div id="ocr-progress-container" class="hidden">
+                        <div class="progress-bar"><div id="ocr-progress-fill"></div></div>
+                        <span id="ocr-status" class="status-text">正在初始化...</span>
+                    </div>
+                </div>
                 <textarea id="report-input" placeholder="例如：右肺上叶恶性肿瘤，大小约3.5cm，无淋巴结转移..."></textarea>
                 <div class="analyze-result hidden" id="analyze-result">
                     <h4>分析结果：</h4>
@@ -90,6 +98,7 @@
         </div>
     </div>
 
+    <script src="./lib/tesseract/tesseract.min.js"></script>
     <script src="./data.js"></script>
     <script src="./app.js"></script>
     <script>
