Feat_Add_Header_Camera_Btn

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header class="app-header">
         <h1>肺癌 TNM 分期助手 (第8版)</h1>
         <div class="header-actions">
+            <button id="ocr-header-btn" class="icon-btn">📷</button>
             <button id="analyze-btn" class="icon-btn">🔍</button>
             <button id="history-btn" class="icon-btn">📜</button>
         </div>
